src/App.css
.App {
  text-align: center;
}
.material-symbols-outlined {
  font-variation-settings: "FILL" 0, "wght" 400, "GRAD" 0, "opsz" 24;
}
.page-title{
  font-family:serif;
}

/* navigation */
.navigation-links {
  display: inline;
  margin-right: 40px;
}
.navigation-container {
  margin-bottom: 25px;
}

/* Calendar Month View */
.lefthand-customizer {
  width: 20%;
  margin-left: 0;
  margin-right: 0;
  display: inline-block;
}
.calendar-table {
  width: 80%;
  margin-left: 0;
  display: inline-block;
  background-color: whitesmoke;
  border-radius: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
}
.calendar-table table {
  margin: auto;
  background-color: white;
  width: 90%;
}
.previous-month,
.next-month,
.month-title {
  display: inline;
}
.month-title{
  margin-left: 35%;
  margin-right: 35%;
  color: rgb(115, 115, 202);
}
.previous-month, .next-month{
  background-color: whitesmoke;
  border: none;
  padding: 5px;
  font-size: 12pt;
  border-radius: 5px;
}
.previous-month:hover, .next-month:hover{
  background-color: rgb(115, 115, 202);
  color: white;
}
.previous-month{
  display: inline-start;
}
.calendar-table td,
th {
  width: 95px;
}
.calendar-table th{
  font-family: serif;
  padding-top: 5px;
}
.calendar-top-bar{
  width: 90%;
  margin: auto;
  background-color: white;
  padding-top: 8px;
}

